--- a/examples/simple.xhtml
+++ b/examples/simple.xhtml
@@ -5,6 +5,7 @@
    <script src="http://www.xml3d.org/xml3d/script/xml3d-4.1-beta.js" type="text/javascript"/>
    <script src="http://www.xml3d.org/xml3d/script/tools/camera-4.1-beta.js" type="text/javascript"/>
    <script src="../build/output/xml3d-motion.js" type="text/javascript"/>
+   <script src="simple.js" type="text/javascript"/>
   </head>
   <body>
    <h1>
@@ -77,7 +78,7 @@
       </shader>
      </defs>
      <view id="Camera" orientation="-0.578102 -0.777834 -0.246520 1.382361" position="-5.000000 8.000000 5.000000"/>
-     <group shader="#Material001" transform="#t_Cube">
+     <group id="cube" shader="#Material001" transform="#t_Cube">
       <mesh src="#Cube_data" type="triangles"/>
      </group>
      <group shader="#Material" transform="#t_Plane">
@@ -88,5 +89,8 @@
      </group>
     </xml3d>
    </div>
+   <p id="notification">Nothing happened ... yet ...</p>
+   <button type="button" onclick="moveCube()">Move Cube</button>
+   <button type="button" onclick="rotateCube()">Rotate Cube</button>
   </body>
  </html>
