--- a/examples/simple.xhtml
+++ b/examples/simple.xhtml
@@ -89,8 +89,15 @@
      </group>
     </xml3d>
    </div>
+
+   <h2>Buttons for testing Fun</h2>
    <p id="notification">Nothing happened ... yet ...</p>
    <button type="button" onclick="moveCube()">Move Cube</button>
    <button type="button" onclick="rotateCube()">Rotate Cube</button>
+   <button type="button" onclick="translateCube()">Translate Cube</button>
+
+   <h2>Collision Image</h2>
+   <img id="collisionimage" src="collision.png" alt="collision"></img>
+
   </body>
  </html>
