--- a/examples/simple.xhtml
+++ b/examples/simple.xhtml
@@ -3,6 +3,7 @@
   <head>
    <link href="http://www.xml3d.org/xml3d/script/xml3d.css" media="all" rel="stylesheet" type="text/css"/>
    <script src="http://www.xml3d.org/xml3d/script/xml3d-4.1-beta.js" type="text/javascript"/>
+   <!-- Alternative for debugging <script src="http://xml3d.org/xml3d/scripts/xml3d-dev.js" type="text/javascript"/> -->
    <script src="http://www.xml3d.org/xml3d/script/tools/camera-4.1-beta.js" type="text/javascript"/>
    <script src="../build/output/xml3d-motion.js" type="text/javascript"/>
    <script src="simple.js" type="text/javascript"/>
@@ -39,6 +40,9 @@
        <float3 name="normal">
         0.000000 -1.000000 0.000000 0.000000 -1.000000 0.000000 0.000000 -1.000000 0.000000 0.000000 -1.000000 0.000000
        </float3>
+       <float2 name="texcoord">
+        1.0 0.0 1.0 1.0 0.0 1.0 1.0 0.0 0.0 1.0 0.0 0.0
+       </float2>
       </data>
       <lightshader id="ls_Spot" script="urn:xml3d:lightshader:point">
        <float3 name="attenuation">
@@ -76,12 +80,23 @@
         0.0978473581213
        </float>
       </shader>
+      <shader id="collisionTexture" script="urn:xml3d:shader:phong">
+		<float3 name="diffuseColor">
+		 1.0 0.9 0.8
+		</float3>
+		<float name="ambientIntensity">
+		 0.2
+		</float>
+		<texture name="diffuseTexture">
+				<img src="collision.png"/>
+		</texture>
+	  </shader>
      </defs>
      <view id="Camera" orientation="-0.578102 -0.777834 -0.246520 1.382361" position="-5.000000 8.000000 5.000000"/>
      <group id="cube" shader="#Material001" transform="#t_Cube">
       <mesh src="#Cube_data" type="triangles"/>
      </group>
-     <group shader="#Material" transform="#t_Plane">
+     <group shader="#collisionTexture" transform="#t_Plane">
       <mesh src="#Plane_data" type="triangles"/>
      </group>
      <group transform="#t_Lamp">
@@ -99,5 +114,7 @@
    <h2>Collision Image</h2>
    <img id="collisionimage" src="collision.png" alt="collision"></img>
 
+   <h2>Canvas?</h2>
+   <canvas id="canvas" width="256" height="256"></canvas>
   </body>
  </html>
