--- a/examples/simple.xhtml
+++ b/examples/simple.xhtml
@@ -8,7 +8,7 @@
    <script src="../build/output/xml3d-motion.js" type="text/javascript"/>
    <script src="simple.js" type="text/javascript"/>
   </head>
-  <body>
+  <body onload="initMoveable();">
    <h1>
     Simple
    </h1>
@@ -113,8 +113,5 @@
 
    <h2>Collision Image</h2>
    <img id="collisionimage" src="collision.png" alt="collision"></img>
-
-   <h2>Canvas?</h2>
-   <canvas id="canvas" width="256" height="256"></canvas>
   </body>
  </html>
