Implemented stop method

--- a/examples/simple.xhtml
+++ b/examples/simple.xhtml
@@ -111,6 +111,7 @@
    <button type="button" onclick="rotateCube()">Rotate Cube</button>
    <button type="button" onclick="translateCube()">Translate Cube</button>
    <button type="button" onclick="moveCubeTo()">Move Cube To</button>
+   <button type="button" onclick="stop()">Stop Cube</button>
 
    <h2>Collision Image</h2>
    <img id="collisionimage" src="collision.png" alt="collision"></img>
