--- a/examples/animation.xhtml
+++ b/examples/animation.xhtml
@@ -72,7 +72,7 @@
       if(!aobj)  {
           aobj = movObjects.cube = createAnimatable();
       }
-      aobj.startAnimation("a1", {duration: 3, id="id12"});
+      aobj.startAnimation("a1", {duration: 3, id: "id12"});
   }
 
   function startOrientationAnimation()
@@ -100,7 +100,7 @@
   }
 
   function createAnimatable() {
-      var c = factory.createAnimatable(document.getElementById("shape_d1e22"));
+      var c = factory.createAnimatable(document.getElementById("shape_d1e22"), null);
       var a1 = factory.createKeyframeAnimation("a1", "translation", document.getElementById("animation01"), {duration: 2000, loop:false});
       var a2 = factory.createKeyframeAnimation("a2", "rotataion", document.getElementById("animation02"));
       c.addAnimation(a1);
