--- a/examples/animation.xhtml
+++ b/examples/animation.xhtml
@@ -38,7 +38,7 @@
             <group id="root">
                <group>
                   <group id="TRANS" transform="#t_TRANS">
-                     <group id="shape_d1e22" shader="#s_d1e23">
+                     <group id="shape_d1e22" shader="#s_d1e23" transform="#t_TRANS">
                         <mesh type="triangles" id="m_d1e25">
                            <int name="index">0 1 2 2 3 0 4 7 5 5 7 6 8 9 10 10 11 8 12 14 13 14 12 15 16 17 18 18 19 16 20 22 21 22 20 23 </int>
                            <float3 name="position">-1.0 -1.0 -1.0 -1.0 1.0 -1.0 1.0 1.0 -1.0 1.0 -1.0 -1.0 -1.0 -1.0 1.0 -1.0 1.0 1.0 1.0 1.0 1.0 1.0 -1.0 1.0 -1.0 -1.0 -1.0 -1.0 -1.0 1.0 -1.0 1.0 1.0 -1.0 1.0 -1.0 1.0 -1.0 -1.0 1.0 -1.0 1.0 1.0 1.0 1.0 1.0 1.0 -1.0 -1.0 1.0 -1.0 -1.0 1.0 1.0 1.0 1.0 1.0 1.0 1.0 -1.0 -1.0 -1.0 -1.0 -1.0 -1.0 1.0 1.0 -1.0 1.0 1.0 -1.0 -1.0 </float3>
@@ -56,10 +56,13 @@
         <button onclick="startPositionAnimation()">Animate position</button>
          </div>
          <div>
+            <button onclick="testSomething()">Test Something</button>
+         </div>
+         <div>
             <button onclick="startOrientationAnimation()">Animate orientation</button>
          </div>
          <div>
-            <button onclick="stopAnimations()">Stop all animations</button>
+            <button onclick="stopAnimations()">Stop Position animation</button>
          </div>
       </div>
       <div id="footer"/>
@@ -67,13 +70,14 @@
 <script type="text/javascript">
   var movObjects = {}, factory = new XMOT.ClientMotionFactory;
   var constraint = new XMOT.CollisionConstraint(5,5,[0,1,0],"collision.png");
+  var id = 0;
 
   function startPositionAnimation() {
       var aobj = movObjects.cube;
       if(!aobj)  {
           aobj = movObjects.cube = createAnimatable();
       }
-      aobj.startAnimation("a1", {duration: 3, id: "id12"});
+      id = aobj.startAnimation("a1", {duration: 30000});
   }
 
   function startOrientationAnimation()
@@ -97,16 +101,20 @@
       var aobj;
       if(!(aobj = movObjects.cube)) 
           return;
-      aobj.stopAnimation("id12");
+      aobj.stopAnimation(id);
   }
 
   function createAnimatable() {
       var c = factory.createAnimatable(document.getElementById("shape_d1e22"), constraint);
-      var a1 = factory.createKeyframeAnimation("a1", "translation", document.getElementById("animation01"), {duration: 2000, loop:false});
-      var a2 = factory.createKeyframeAnimation("a2", "rotation", document.getElementById("animation02"));
+      var a1 = factory.createKeyframeAnimation("a1", "Position", document.getElementById("animation01"), {duration: 2000, loop:false});
+      var a2 = factory.createKeyframeAnimation("a2", "Orientation", document.getElementById("animation02"));
       c.addAnimation(a1);
       c.addAnimation(a2, {duration: 5000, loop: true});
       return c;
+  }
+  function testSomething(){
+  	var m = factory.createMoveable(document.getElementById("shape_d1e22"), constraint);
+  	m.moveTo([0,0,0], undefined, 1000).moveTo([-5,0,0], undefined, 1000).moveTo([0,0,0], undefined, 1000).moveTo([5,0,0], undefined, 1000).moveTo([0,-5,0], undefined, 1000).moveTo([0,0,0], undefined, 1000).moveTo([0,5,0], undefined, 1000).moveTo([0,0,0], undefined, 1000).moveTo([0,0,-5], undefined, 1000).moveTo([0,0,0], undefined, 1000).moveTo([0,0,5], undefined, 1000).moveTo([0,0,0], undefined, 1000);
   }
 </script>
       <br/>
