--- a/examples/animation.xhtml
+++ b/examples/animation.xhtml
@@ -92,8 +92,8 @@
       if(!aobj) {
           aobj = movObjects.cube = createAnimatable();
       }
-      aobj.startAnimation("a2")
-      aobj.startAnimation("a1");
+      aobj.startAnimation("a2", {duration: 5000, loop: true})
+      id = aobj.startAnimation("a1", {duration: 5000, loop: true});
   }
 
   function stopAnimations() {
