--- a/examples/animation.xhtml
+++ b/examples/animation.xhtml
@@ -92,7 +92,7 @@
       if(!aobj) {
           aobj = movObjects.cube = createAnimatable();
       }
-      aobj.startAnimation("a2")
+      aobj.startAnimation("a2", {delay: 2500})
       id = aobj.startAnimation("a1", {duration: 5000, loop: 3});
   }
 
