--- a/examples/animation.xhtml
+++ b/examples/animation.xhtml
@@ -8,7 +8,8 @@
       <title>DOM Modifications: Animations</title>
       <script src="http://www.xml3d.org/xml3d/script/xml3d-4.1-beta.js" type="text/javascript"/>
       <!-- Alternative for debugging <script src="http://xml3d.org/xml3d/scripts/xml3d-dev.js" type="text/javascript"/> -->
-      <script src="http://www.xml3d.org/xml3d/script/tools/camera-4.1-beta.js" type="text/javascript"/>
+      <!-- <script src="http://www.xml3d.org/xml3d/script/tools/camera-4.1-beta.js" type="text/javascript"/> -->
+      <script src="http://xml3d.org/xml3d/scripts/xml3d-4.1-rc.js"  type="text/javascript"/>
       <script src="../build/output/xml3d-motion.js" type="text/javascript"/>
    </head>
    <body>
@@ -107,11 +108,11 @@
   }
 
   function combinedAnimation(){
-        var aobj = movObjects.cube;
+      var aobj = movObjects.cube;
       if(!aobj) {
           aobj = movObjects.cube = createAnimatable();
       }
-      aobj.startAnimation("combined");
+      aobj.startAnimation("combined", {callback:combinedAnimation});
   }
 
   function createAnimatable() {
