Corrected import of xml-3d.js

--- a/examples/animation.xhtml
+++ b/examples/animation.xhtml
@@ -6,7 +6,7 @@
       xmlns:x3d="http://www.web3d.org/specifications/x3d-namespace">
    <head>
       <title>DOM Modifications: Animations</title>
-      <script src="http://www.xml3d.org/xml3d/script/xml3d-4.1-beta.js" type="text/javascript"/>
+      <!--<script src="http://www.xml3d.org/xml3d/script/xml3d-4.1-beta.js" type="text/javascript"/> -->
       <!-- Alternative for debugging <script src="http://xml3d.org/xml3d/scripts/xml3d-dev.js" type="text/javascript"/> -->
       <!-- <script src="http://www.xml3d.org/xml3d/script/tools/camera-4.1-beta.js" type="text/javascript"/> -->
       <script src="http://xml3d.org/xml3d/scripts/xml3d-4.1-rc.js"  type="text/javascript"/>
