--- a/examples/endlessanimation.xhtml
+++ b/examples/endlessanimation.xhtml
@@ -53,7 +53,7 @@
 
 <script type="text/javascript">
   var movObjects = {}, factory = new XMOT.ClientMotionFactory;
-  var constraint = new XMOT.SimpleConstraint(true);
+  var constraint = new XMOT.SimpleConstraint(true, true);
   var id = 0;
   var done = false;
 
