--- a/examples/simple.xhtml
+++ b/examples/simple.xhtml
@@ -4,8 +4,9 @@
    <link href="http://www.xml3d.org/xml3d/script/xml3d.css" media="all" rel="stylesheet" type="text/css"/>
    <script src="http://www.xml3d.org/xml3d/script/xml3d-4.1-beta.js" type="text/javascript"/>
    <!-- Alternative for debugging <script src="http://xml3d.org/xml3d/scripts/xml3d-dev.js" type="text/javascript"/> -->
-   <script src="http://www.xml3d.org/xml3d/script/tools/camera-4.1-beta.js" type="text/javascript"/>
+   <script src="http://xml3d.org/xml3d/scripts/xml3d-4.1-rc.js"  type="text/javascript"/>
    <script src="../build/output/xml3d-motion.js" type="text/javascript"/>
+   <script src="CollisionConstraint.js" type="text/javascript"/>
    <script src="simple.js" type="text/javascript"/>
   </head>
   <body onload="initMoveable();">
