Bugfix: stopAnimtion can now handle wrong ids

--- a/examples/animation.xhtml
+++ b/examples/animation.xhtml
@@ -65,7 +65,8 @@
             <button onclick="startOrientationAnimation()">Animate orientation</button>
          </div>
          <div>
-            <button onclick="startTwoAnimations()">Animate both</button>
+            <button onclick="startTwoAnimations()">Start TWO Animations</button>
+            Just one of those two will be stopped, if you press stop.
          </div>
          <div>
             <button onclick="stopAnimations()">Stop the latest animation</button>
