Fixed texcoords in simple example

--- a/examples/simple.xhtml
+++ b/examples/simple.xhtml
@@ -2,9 +2,7 @@
  <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
    <link href="http://www.xml3d.org/xml3d/script/xml3d.css" media="all" rel="stylesheet" type="text/css"/>
-   <script src="http://www.xml3d.org/xml3d/script/xml3d-4.1-beta.js" type="text/javascript"/>
-   <!-- Alternative for debugging <script src="http://xml3d.org/xml3d/scripts/xml3d-dev.js" type="text/javascript"/> -->
-   <script src="http://xml3d.org/xml3d/scripts/xml3d-4.1-rc.js"  type="text/javascript"/>
+   <script src="http://xml3d.org/xml3d/scripts/xml3d.js"  type="text/javascript"/>
    <script src="../build/output/xml3d-motion.js" type="text/javascript"/>
    <script src="CollisionConstraint.js" type="text/javascript"/>
    <script src="simple.js" type="text/javascript"/>
@@ -42,7 +40,7 @@
         0.000000 -1.000000 0.000000 0.000000 -1.000000 0.000000 0.000000 -1.000000 0.000000 0.000000 -1.000000 0.000000
        </float3>
        <float2 name="texcoord">
-        1.0 0.0 1.0 1.0 0.0 1.0 1.0 0.0 0.0 1.0 0.0 0.0
+        1.0 0.0 1.0 1.0 0.0 1.0 0.0 0.0
        </float2>
       </data>
       <lightshader id="ls_Spot" script="urn:xml3d:lightshader:point">
