--- a/examples/cameracontroller.xhtml
+++ b/examples/cameracontroller.xhtml
@@ -11,7 +11,6 @@
    </head>
    <body onload="initCamera()">
       <h1>CameraController</h1>
-      <div style="color: red">
          <xml3d xmlns="http://www.xml3d.org/2009/xml3d" style="width: 512px; height: 512px; background-color:rgb(14,56,102);">
             <defs>
                <transform id="t_TRANS"/>
@@ -45,7 +44,6 @@
                </group>
             </group>
          </xml3d>
-      </div>
       <div>
         <div>
           <button onclick="animate()">Animate for 100 seconds</button>
@@ -73,6 +71,7 @@
   
   function initCamera(){
   	movObjects.cam = new XMOT.CameraController("node-camera_player", [0,0,0,0]);
+  	createPois();
   };
 
   function createAnimatable() {
@@ -81,6 +80,20 @@
       c.addAnimation(a1);
       return c;
   };
+
+  function createPois(){
+	  var cam = movObjects.cam;
+	  var i = 0;
+	  // FU JAVASCRIPT!!!
+	  cam.addPointOfInterest([i,i,i], [i,i,i,i]);
+	  cam.addPointOfInterest([i,i,i], [i,i,i,i]);i++;
+	  cam.addPointOfInterest([i,i,i], [i,i,i,i]);i++;
+	  cam.addPointOfInterest([i,i,i], [i,i,i,i]);i++;
+	  cam.addPointOfInterest([i,i,i], [i,i,i,i]);i++;
+	  cam.addPointOfInterest([i,i,i], [i,i,i,i]);i++;
+	  cam.addPointOfInterest([i,i,i], [i,i,i,i]);
+  };
+
 </script>
       <br/>
    </body>
