--- a/examples/cameracontroller.xhtml
+++ b/examples/cameracontroller.xhtml
@@ -70,7 +70,7 @@
   };
   
   function initCamera(){
-  	movObjects.cam = new XMOT.CameraController("node-camera_player", [0,0,0,0]);
+  	movObjects.cam = new XMOT.CameraController("node-camera_player", [0,0,0,0], "left");
   	createPois();
   };
 
