Adopted cameracontroller example

--- a/examples/cameracontroller.xhtml
+++ b/examples/cameracontroller.xhtml
@@ -66,7 +66,7 @@
 			};
 
 			function initCamera(){
-				movObjects.cam = new XMOT.CameraController("node-camera_player", [0,0,0,0], "left");
+				movObjects.cam = new XMOT.CameraController("node-camera_player", [0,0,0,0], "left", true);
 				createPois();
 			};
 
